--- a/style1.css
+++ b/style1.css
@@ -10,6 +10,7 @@ body{
 	right:10px;
 	left:10px;
 	text-align:center;
+	padding-bottom: 30px;
 }
 table{
 	padding-bottom:10px;
@@ -17,6 +18,7 @@ table{
 	padding-right:10px;
 	padding-top:10px;
 }
+
 div{
 	text-align:center;
 	left:40px;
