--- a/new.css
+++ b/new.css
@@ -9,7 +9,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    background-color: #f0f0f0; 
+    background-color: #e7f1f8; 
     padding-bottom: 5%;
 }
 
@@ -22,7 +22,7 @@ header {
     padding-bottom: 2%;
 }
 .images{
-    padding-top: 20%;
+    padding-top: 10%;
 }
 header h1 {
     font-size: 2.5rem;
